# clog

./: README.rst
clog/: CMakeLists.txt  logger.c
clog/include/: logger.h
clog/test/: test_log.c  test_log.h  unit_test.c
scripts/Win/: debug.bat  install.bat  static.bat
scripts/bash/: debug.sh  install.sh  static.sh
scripts/zsh/: install.zsh  static.zsh
